--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,11 @@ markdown_extensions:
   - pymdownx.mark
   - attr_list
   - md_in_html
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
   - tables
   - def_list
   - pymdownx.tasklist:
