--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,8 +14,9 @@ theme:
     - content.tooltips
     - navigation.footer
     - navigation.indexes
-    - navigation.instant
-    - navigation.instant.prefetch
+    #- navigation.instant
+    #- navigation.instant.prefetch
+    #- navigation.instant.progress
     - navigation.sections
     - navigation.tabs
     - navigation.top
