--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,3 +84,4 @@ nav:
     - Curves: cg/curves.md
     - Surfaces and Volumes: cg/surfaces_volumes.md
     - Mesh: cg/mesh.md
+    - Geometric Transformations: cg/transformations.md
