--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,3 +89,4 @@ nav:
     - Geometric Transformations: cg/transformations.md
     - Viewing and Projections: cg/viewing.md
     - Colors: cg/colors.md
+    - Lighting and Shading: cg/lighting.md
