--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Notes 
-site_url: https://anirudh-s-kumar.github.io/notes/
-repo_name: Anirudh-S-Kumar/notes
-repo_url: https://github.com/Anirudh-S-Kumar/notes
+site_url: https://anirudh-s-kumar.github.io/misc-notes/
+repo_name: Anirudh-S-Kumar/misc-notes
+repo_url: https://github.com/Anirudh-S-Kumar/misc-notes
 edit_uri: edit/main/docs/
 theme:
   name: material
