ratio analysis done

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,7 @@ nav:
   - Foundations of Finance:
     - Time Value of Money: ff/time_value_money.md
     - Analysis of Financial Statements: ff/financial_statements.md
+    - Ratio Analysis: ff/ratio_analysis.md
 
   - Computer Graphics:
     - index: cg/index.md
